# term_4_programming

./: README.md
fenics/documented/navier-stokes/cpp/: PressureUpdate.h  TentativeVelocity.h  VelocityUpdate.h  main.cpp
fenics/documented/navier-stokes/cpp/geometry/: gmsh.cpp  meshio.py
fenics/documented/navier-stokes/cpp/mesh/: kek.h5  kek.msh  kek.xdmf  kek.xml  kek_gmsh:geometrical.xml
gmsh/source/: stl.cpp  thor2.cpp
gmsh/source/stl/: holder.stl
vtk/: CMakeLists.txt  spring.cpp  spring.stl
